[package]
name = "bevy_joycons"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_input = { version = "0.9.1", default-features = false }
joycon = { git = "https://github.com/Yamakaky/joy", version = "0.1.0", rev = "c55030e" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
